Adding link to njoagleod.

--- a/content/projects.html
+++ b/content/projects.html
@@ -17,3 +17,7 @@ tags: []
 <h2>NJ OAG Use Of Force Data Package for R</h2>
 <p><a href="https://github.com/tor-gu/njoaguof/blob/main/README.md">NJOAGUOF</a></p>
 </div>
+<div id="nj-oag-law-enforcement-officer-diversity-data-package-for-r" class="section level2">
+<h2>NJ OAG Law Enforcement Officer Diversity Data Package for R</h2>
+<p><a href="https://github.com/tor-gu/njoagleod#readme">NJOAGLEOD</a></p>
+</div>
