Added NJOAGUOF Data Explorer link.

--- a/content/projects.html
+++ b/content/projects.html
@@ -21,3 +21,9 @@ tags: []
 <h2>NJ OAG Law Enforcement Officer Diversity Data Package for R</h2>
 <p><a href="https://github.com/tor-gu/njoagleod#readme">NJOAGLEOD</a></p>
 </div>
+<div id="nj-oag-use-of-force-data-explorer" class="section level2">
+<h2>NJ OAG Use Of Force Data Explorer</h2>
+<p><a href="https://bumble.tor-gu.com/njoaguof/">NJOAGUOF Data Explorer</a></p>
+<p>This is a simple dashboard application to illustrate the use of
+of the <a href="https://github.com/tor-gu/njoaguof/blob/main/README.md">NJOAGUOF</a> data package. The source code is <a href="https://github.com/tor-gu/njoaguofdash">here</a>.</p>
+</div>
