Fleshing out the projects page slightly.

--- a/content/projects.html
+++ b/content/projects.html
@@ -16,14 +16,16 @@ tags: []
 <div id="nj-oag-use-of-force-data-package-for-r" class="section level2">
 <h2>NJ OAG Use Of Force Data Package for R</h2>
 <p><a href="https://github.com/tor-gu/njoaguof/blob/main/README.md">NJOAGUOF</a></p>
+<p>This data package is a cleaned-up version of the NJ OAG Use of Force dataset available from <a href="https://www.njoag.gov/force/" class="uri">https://www.njoag.gov/force/</a>.</p>
 </div>
 <div id="nj-oag-law-enforcement-officer-diversity-data-package-for-r" class="section level2">
 <h2>NJ OAG Law Enforcement Officer Diversity Data Package for R</h2>
 <p><a href="https://github.com/tor-gu/njoagleod#readme">NJOAGLEOD</a></p>
+<p>This data package is a cleaned-up version of the NJ OAG Law Enforcement Officer Diversity dataset available from <a href="https://www.njoag.gov/policerecruiting/" class="uri">https://www.njoag.gov/policerecruiting/</a></p>
 </div>
 <div id="nj-oag-use-of-force-data-explorer" class="section level2">
 <h2>NJ OAG Use Of Force Data Explorer</h2>
 <p><a href="https://bumble.tor-gu.com/njoaguof/">NJOAGUOF Data Explorer</a></p>
-<p>This is a simple dashboard application to illustrate the use of
+<p>This is a simple <a href="https://shiny.rstudio.com/">R/Shiny</a> dashboard application to illustrate the use of
 of the <a href="https://github.com/tor-gu/njoaguof/blob/main/README.md">NJOAGUOF</a> data package. The source code is <a href="https://github.com/tor-gu/njoaguofdash">here</a>.</p>
 </div>
