Added short description and github link for streakexplorer project.

--- a/content/projects.html
+++ b/content/projects.html
@@ -12,6 +12,8 @@ tags: []
 <div id="baseball-streak-explorer" class="section level2">
 <h2>Baseball Streak Explorer</h2>
 <p><a href="https://shiny.tor-gu.com/streak-explorer">Streak Explorer</a></p>
+<p>This is an <a href="https://shiny.rstudio.com/">R/Shiny</a> application that uses a novel visualization for comparing hot and cold streaks of Major League Baseball teams.</p>
+<p>The source code is available <a href="https://github.com/tor-gu/streakexplorer">here</a>.</p>
 </div>
 <div id="nj-oag-use-of-force-data-package-for-r" class="section level2">
 <h2>NJ OAG Use Of Force Data Package for R</h2>
