--- a/content/projects.html
+++ b/content/projects.html
@@ -27,7 +27,7 @@ tags: []
 </div>
 <div id="nj-oag-use-of-force-data-explorer" class="section level2">
 <h2>NJ OAG Use Of Force Data Explorer</h2>
-<p><a href="https://bumble.tor-gu.com/njoaguof/">NJOAGUOF Data Explorer</a></p>
+<p><a href="https://shiny.tor-gu.com/njoaguof/">NJOAGUOF Data Explorer</a></p>
 <p>This is a simple <a href="https://shiny.rstudio.com/">R/Shiny</a> dashboard application to illustrate the use of
 of the <a href="https://github.com/tor-gu/njoaguof/blob/main/README.md">NJOAGUOF</a> data package. The source code is <a href="https://github.com/tor-gu/njoaguofdash">here</a>.</p>
 </div>
