1) Changing font size on archive-item-link. 2) Adding njelections and njmunicipalities to slightly reorganized projects page.

--- a/content/projects.html
+++ b/content/projects.html
@@ -15,19 +15,32 @@ tags: []
 <p>This is an <a href="https://shiny.rstudio.com/">R/Shiny</a> application that uses a novel visualization for comparing hot and cold streaks of Major League Baseball teams.</p>
 <p>The source code is available <a href="https://github.com/tor-gu/streakexplorer">here</a>.</p>
 </div>
-<div id="nj-oag-use-of-force-data-package-for-r" class="section level2">
-<h2>NJ OAG Use Of Force Data Package for R</h2>
-<p><a href="https://github.com/tor-gu/njoaguof/blob/main/README.md">NJOAGUOF</a></p>
-<p>This data package is a cleaned-up version of the NJ OAG Use of Force dataset available from <a href="https://www.njoag.gov/force/" class="uri">https://www.njoag.gov/force/</a>.</p>
-</div>
-<div id="nj-oag-law-enforcement-officer-diversity-data-package-for-r" class="section level2">
-<h2>NJ OAG Law Enforcement Officer Diversity Data Package for R</h2>
-<p><a href="https://github.com/tor-gu/njoagleod#readme">NJOAGLEOD</a></p>
-<p>This data package is a cleaned-up version of the NJ OAG Law Enforcement Officer Diversity dataset available from <a href="https://www.njoag.gov/policerecruiting/" class="uri">https://www.njoag.gov/policerecruiting/</a></p>
-</div>
 <div id="nj-oag-use-of-force-data-explorer" class="section level2">
 <h2>NJ OAG Use Of Force Data Explorer</h2>
 <p><a href="https://shiny.tor-gu.com/njoaguof/">NJOAGUOF Data Explorer</a></p>
 <p>This is a simple <a href="https://shiny.rstudio.com/">R/Shiny</a> dashboard application to illustrate the use of
 of the <a href="https://github.com/tor-gu/njoaguof/blob/main/README.md">NJOAGUOF</a> data package. The source code is <a href="https://github.com/tor-gu/njoaguofdash">here</a>.</p>
+</div>
+<div id="data-packages" class="section level2">
+<h2>Data Packages</h2>
+<div id="nj-oag-use-of-force-data-package-for-r" class="section level4">
+<h4>NJ OAG Use Of Force Data Package for R</h4>
+<p><a href="https://github.com/tor-gu/njoaguof/#readme">NJOAGUOF</a></p>
+<p>This data package is a cleaned-up version of the NJ OAG Use of Force dataset available from <a href="https://www.njoag.gov/force/" class="uri">https://www.njoag.gov/force/</a>.</p>
+</div>
+<div id="nj-oag-law-enforcement-officer-diversity-data-package-for-r" class="section level4">
+<h4>NJ OAG Law Enforcement Officer Diversity Data Package for R</h4>
+<p><a href="https://github.com/tor-gu/njoagleod#readme">NJOAGLEOD</a></p>
+<p>This data package is a cleaned-up version of the NJ OAG Law Enforcement Officer Diversity dataset available from <a href="https://www.njoag.gov/policerecruiting/" class="uri">https://www.njoag.gov/policerecruiting/</a></p>
+</div>
+<div id="nj-elections-data-package-for-r" class="section level4">
+<h4>NJ Elections Data Package for R</h4>
+<p><a href="https://github.com/tor-gu/njelections/#readme">NJELECTIONS</a></p>
+<p>This is a data package for R containing the results of statewide elections in NJ, from 2004 to 2021.</p>
+</div>
+<div id="nj-municipaliites-data-package-for-r" class="section level4">
+<h4>NJ Municipaliites Data Package for R</h4>
+<p><a href="https://github.com/tor-gu/njmunicipalities#readme">NJMUNICIPALITIES</a></p>
+<p>This is a data package for R that contains every county and municipality in New Jersey, from 2000 to 2021.</p>
+</div>
 </div>
