1) Adding page for njmunicipalities-api 2) Updating projects page.

--- a/content/projects.html
+++ b/content/projects.html
@@ -38,9 +38,17 @@ of the <a href="https://github.com/tor-gu/njoaguof/blob/main/README.md">NJOAGUOF
 <p><a href="https://github.com/tor-gu/njelections/#readme">NJELECTIONS</a></p>
 <p>This is a data package for R containing the results of statewide elections in NJ, from 2004 to 2021.</p>
 </div>
-<div id="nj-municipaliites-data-package-for-r" class="section level4">
-<h4>NJ Municipaliites Data Package for R</h4>
+<div id="nj-municipalities-data-package-for-r" class="section level4">
+<h4>NJ Municipalities Data Package for R</h4>
 <p><a href="https://github.com/tor-gu/njmunicipalities#readme">NJMUNICIPALITIES</a></p>
 <p>This is a data package for R that contains every county and municipality in New Jersey, from 2000 to 2022.</p>
+</div>
+</div>
+<div id="apis" class="section level2">
+<h2>APIs</h2>
+<div id="nj-municipalities-api" class="section level4">
+<h4>NJ Municipalities API</h4>
+<p><a href="/apis/njmunicipalities.html">NJMUNICIPALITIES-API</a></p>
+<p>This is an API that exposes the data in the <a href="#nj-municipalities-data-package-for-r">NJMUNICIPALITIES data package for R</a>. The source code is <a href="https://github.com/tor-gu/njmunicipalities-api">here</a></p>
 </div>
 </div>
